--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
     <!-- Main text goes here -->
     We are an independent games company based in Seattle, WA.
     We develop tabletop and computer games aimed at kids.
+	  <p>
+		  Check out our <a href="https://www.artstation.com/jobs/bJXr">job posting</a> for a concept artist at Artstation!
     
     <hr>
-    
-    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna.Nunc viverra imperdiet enim. Fusce est. Vivamus a tellus.Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin pharetra nonummy pede. Mauris et orci.
-  </div>
+    </div>
   <div class="footer">
     <!-- Footer goes here -->
     ©2021 Ultraverse Games, LLC.
