--- a/index.html
+++ b/index.html
@@ -24,11 +24,7 @@
     </span>
     <span class = "headerbar"> | </span>
     <span class="headerbutton">
-      <a href="/about.html">About us</a>
-    </span>
-    <span class = "headerbar"> | </span>
-    <span class="headerbutton">
-      <a href="/contact.html">Contact</a>
+      <a href="mailto:jobs@ultraverse.games">Contact</a>
     </span>
   </div>
   <div class="maintitle">
